--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://babybreath101.github.io/minimalist-web-app",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -23,8 +22,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,3 +43,4 @@
     "gh-pages": "^2.2.0"
   }
 }
+
